Fix: images not displaying on IE

--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -5,6 +5,7 @@
     color: $darkgrey;
     align-items: center;
     justify-content: space-between;
+    flex-basis: 100%;
 
     &__wrapper {
         flex: 0 0 auto;
@@ -31,6 +32,7 @@
     &__logo {
         margin-right: 0.5rem;
         height: 100%;
+        flex-basis: auto;
 
         &:last-child {
             margin-right: 0;
@@ -43,6 +45,7 @@
 
     &__text {
         text-align: center;
+        flex: 1 0 auto;
 
         > :last-child {
             margin-bottom: 0;
@@ -68,6 +71,7 @@
         &__logos {
             justify-content: space-between;
             margin-bottom: 0;
+            margin-right: 1rem;
         }
 
         &__text {
